--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,14 @@
 #markdown: rdiscount
 permalink: /:title/
-url: http://paralleld.github.io
+url: http://liangzong6.github.io
 #highlighter: pygments
 highlighter: rouge
 gems: [jekyll-paginate]
 paginate: 100
 paginate_path: "page:num"
-name: paralleld
-description: paralleld | 多撸少BB
-author: paralleld
-email: paralleld@qq.com 
-duoshuo: dwj
-weibo: 1859819624
-hub: paralleld
+name: liangzong6
+description: liangzong6
+author: liangzong6
+email: paralleld@qq.com
+hub: liangzong6
 safe: false
-about: "老码农"
