rename user name

--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 #markdown: rdiscount
 permalink: /:title/
-url: http://liangzong6.github.io
+url: http://qingping209.github.io
 #highlighter: pygments
 highlighter: rouge
 gems: [jekyll-paginate]
 paginate: 100
 paginate_path: "page:num"
-name: liangzong6
-description: liangzong6
-author: liangzong6
+name: qingping209
+description: qingping209
+author: qingping209
 email: paralleld@qq.com
-hub: liangzong6
+hub: qingping209
 safe: false
