--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,6 @@ permalink: /:title/
 url: http://qingping209.github.io
 highlighter: pygments
 highlighter: rouge
-gems: [jekyll-paginate]
 paginate: 100
 paginate_path: "page:num"
 name: cnredis
@@ -11,3 +10,6 @@ author: qingping209
 email: paralleld@qq.com
 hub: qingping209
 safe: false
+intensedebate_identifier: 40lcPvGHztdOZzuQmbIE
+plugins: [jekyll-paginate]
+gems: [jekyll-paginate]
